// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-instance-editor/fields/CustomField should correctly render a custom field is last 1`] = `
<div
  className="metadata-instance-editor-field-custom"
>
  <Field
    dataValue="value"
    onRemove={[Function]}
    type="string"
  />
</div>
`;

exports[`features/metadata-instance-editor/fields/CustomField should correctly render a custom field when editable 1`] = `
<div
  className="metadata-instance-editor-field-custom"
>
  <Field
    canEdit={true}
    dataValue="value"
    onRemove={[Function]}
    type="string"
  />
  <div
    className="metadata-instance-editor-field-custom-actions"
  >
    <Button
      data-resin-target="metadata-customfieldremove"
      onClick={[Function]}
      type="button"
    >
      <IconMinusThin
        color="#999"
      />
    </Button>
  </div>
</div>
`;

exports[`features/metadata-instance-editor/fields/CustomField should correctly render a custom field when not editable 1`] = `
<div
  className="metadata-instance-editor-field-custom"
>
  <Field
    dataValue="value"
    onRemove={[Function]}
    type="string"
  />
</div>
`;
